<resources>
    <string name="app_name">des_ctryptage</string>
    <string name="atbash">Atbash</string>
    <string name="chriffrement">chriffrement</string>
    <string name="texte_a_chiffrer">texte a chiffrer</string>
    <string name="d_chiffrement">déchiffrement</string>
    <string name="c_sar">César</string>
    <string name="crypter">crypter</string>
    <string name="decrypter">decrypter</string>
    <string name="delastelle">Delastelle</string>
    <string name="clef">clef :</string>
    <string name="chiffrement">chiffrement</string>
    <string name="dechiffrement">dechiffrement</string>
    <string name="make_random_polybe">make random polybe</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="hill">Hill</string>
    <string name="playfair">PlayFair</string>
    <string name="cesar">Cesar</string>
    <string name="polybe">Polybe</string>
    <string name="transposition_rectangulaire">Transposition rectangulaire</string>
    <string name="vigen_re">Vigenére</string>
    <string name="texte_cach">texte caché</string>
    <string name="texte">texte :</string>
    <string name="defaul">default</string>
    <string name="random">Random</string>
    <string name="transposition">Transposition</string>
    <string name="texte_de_base">Texte de base</string>
    <string name="texte_dechiffrer">texte à dechiffrer</string>
</resources>