<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transpositionrect"
    android:background="@drawable/hdpi">
    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/transposition"
        android:textSize="60sp"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@id/transin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/transin"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/transtx"
        app:layout_constraintTop_toBottomOf="@id/titre"
        android:importantForAutofill="no"
        android:hint="@string/texte_a_chiffrer"/>

    <TextView
        android:id="@+id/transtx"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/texte"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titre" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/clef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transtx" />

    <EditText
        android:id="@+id/transkey"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/transin"
        android:importantForAutofill="no"
        android:hint="@string/clef"/>

    <Button
        android:id="@+id/transbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/chiffrement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfix" />

    <Button
        android:id="@+id/transbtun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/dechiffrement"
        app:layout_constraintStart_toEndOf="@+id/transbt"
        app:layout_constraintTop_toBottomOf="@+id/transfix" />

    <TableLayout
        android:id="@+id/transtable"
        android:layout_width="361dp"
        android:layout_height="411dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transbt"/>



    <TextView
        android:id="@+id/transfix"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/texte_cach"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/transout"
        android:layout_width="211dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/transfix"
        app:layout_constraintTop_toBottomOf="@+id/transkey"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:hint="@string/texte_dechiffrer"/>



</androidx.constraintlayout.widget.ConstraintLayout>