<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Atbash"
    android:background="@drawable/hdpi">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/atbash"
        android:textSize="60sp"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@id/atbashtxin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/atbashBtchiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"

        android:text="@string/chriffrement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atbashtxin" />

    <Button
        android:id="@+id/atbashBtdechif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="24dp"
        android:text="@string/d_chiffrement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atbashtxin" />

    <TextView
        android:id="@+id/atbashtxout"
        android:layout_width="349dp"
        android:layout_height="98dp"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="39dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/atbashBtchiff"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/atbashtxin"
        android:layout_width="340dp"
        android:layout_height="98dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texte_a_chiffrer"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        android:hint="@string/texte_a_chiffrer"/>

</androidx.constraintlayout.widget.ConstraintLayout>